Added first post

--- a/layouts/partials/footer-single.html
+++ b/layouts/partials/footer-single.html
@@ -1,7 +1,6 @@
-<header>
-  <h1>Ghassan Shahzad</h1>
-  <p class="subtitle">A site for notes, essays, and wanderings</p>
-
+<hr>
+<footer>
+  <p>© {{ now.Year }} Ghassan Shahzad</p>
   <nav>
     <ul style="list-style: none; padding: 0; display: flex; gap: 1rem;">
         <li><a href="/">Home</a></li>
@@ -11,6 +10,4 @@
         <li style="margin-top: 0"><a href="/index.xml">RSS</a> </li>
     </ul>
   </nav>
-
-  <hr>
-</header>
+</footer>
