--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,15 @@
-{{ define "main" }}
-  <h1>{{ .Title }}</h1>
-  {{ .Content }}
-{{ end }}
+<!DOCTYPE html>
+<html lang="en">
+{{ partial "head.html" . }}
+<body>
+  <article>
+    <section>    
+      <h1>{{ .Title }}</h1>
+      <p class="author">{{ .Params.Author }}</p>
+    </section>
+
+    {{ .Content }}
+    {{ partial "footer-single.html" . }}
+  </article>
+</body>
+</html>
