--- a/public/css/tufte.css
+++ b/public/css/tufte.css
@@ -42,6 +42,7 @@
 /* Tufte CSS styles */
 html {
     font-size: 15px;
+    text-rendering: optimizeLegibility;
 }
 
 body {
@@ -134,6 +135,7 @@ p {
     margin-top: 1.4rem;
     margin-bottom: 1.4rem;
     padding-right: 0;
+    width: 55%;
     vertical-align: baseline;
 }
 
@@ -366,16 +368,52 @@ label.margin-toggle:not(.sidenote-number) {
     width: 100%;
     height: 100%;
 }
-a, nav a, footer a {
-  color: #d4af37;
-  text-decoration: none;
-  border-bottom: 1px solid #d4af37;
+
+nav a, footer a {
+    font-size: 1.2rem;
+    text-decoration: none;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
 }
 
-a:hover, nav a:hover, footer a:hover {
-  border-bottom: 1px solid #68561b;
+header {
+    padding-top: 1rem;
 }
 
+author {
+    font-size: 1.4rem;
+    font-weight: 400;
+    margin: 1rem auto 1rem 0;
+    line-height: 1;
+}
+
+article {
+    padding: 5rem 0rem;
+}
+
+/* Container */
+table {
+  width: 35%;
+  border-collapse: collapse;
+  margin: 2rem 0;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+thead th {
+  text-align: left;
+  font-weight: bold;
+  padding: 0.75rem;
+  border: 2px solid #999; /* Soft silver line */
+}
+
+/* Body rows */
+tbody td {
+  padding: 0.5rem 0.75rem;
+  border-bottom: 1px solid #ddd; /* Thin divider */
+  border-right: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+}
 
 @media (max-width: 760px) {
     body {
